--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ function showIntroScreen() {
           Every day, I ride an elevator to get to music class. <br>
           But today, something strange is happening... 
         </p>
-        <button id="continueIntro" style="margin-top: 30px; padding: 14px 28px; font-size: 1em; border-radius: 10px; background-color: #4b2e83; color: white; border: none;">Continue</button>
+        <button id="continueIntro" style="margin-top: 30px; padding: 14px 28px; font-size: 1em; border-radius: 10px; background-color: #4b2e83; color: white; border: none;">Click to Play</button>
       </div>
     </div>
     <audio id="introAudio" src="intro_narration.mp3"></audio>
