--- a/index.html
+++ b/index.html
@@ -91,8 +91,11 @@
 
   <script>
 
-    const INTRO_IMG = "Melody.png";          // picture of Melody the cat
-    const INTRO_NARRATION = "intro_narration.mp3"; // narration audio file
+    const INTRO_IMG = "Melody.png";
+    const INTRO_NARRATION = "intro_narration.mp3";
+    const INTRO_VIDEO = "intro_video.mp4";
+    const INTRO_NARRATION2 = "intro_narration2.mp3";
+ 
     
   const TRIALS_PER_BLOCK = 2;
   const BLOCK_ORDER = ["tempo", "pitch"];
@@ -163,32 +166,65 @@ function showIntroScreen() {
       console.warn("Autoplay blocked or failed:", err);
     }
 
-    introAudio.onended = async () => {
-      // Restore base layout
-      document.body.innerHTML = `
-        <div id="visual-container"></div>
-        <audio id="myAudio" hidden preload="auto"></audio>
-        <div id="trialControls"></div>`;
-
-      setupVisualElements();
-
-      // Load block files
-      for (const block of BLOCK_ORDER) {
-        try {
-          const response = await fetch(BLOCK_FILES[block]);
-          const text = await response.text();
-          const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
-          shuffleArray(rows);
-          blocks[block] = rows.slice(0, TRIALS_PER_BLOCK);
-        } catch (err) {
-          alert(`Failed to load ${block} block: ` + err.message);
-          return;
-        }
-      }
-
-      runPracticeTrials(BLOCK_ORDER[currentBlockIndex]);
+     introAudio.onended = () => {
+      showIntroVideo();
     };
   });
+}
+
+    function showIntroVideo() {
+  document.body.innerHTML = `
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: black;">
+      <video id="introVideo" width="100%" height="100%" playsinline style="max-width: 100%; max-height: 100%;" muted>
+        <source src="intro_video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <audio id="introNarration2" src="intro_narration2.mp3"></audio>
+    </div>
+  `;
+  const video = document.getElementById("introVideo");
+  const narration = document.getElementById("introNarration2");
+
+  const startPlayback = async () => {
+    try {
+      await Promise.all([video.play(), narration.play()]);
+    } catch (err) {
+      console.warn("Playback failed:", err);
+    }
+
+    video.onended = () => {
+      proceedToMainTask();
+    };
+  };
+
+  window.addEventListener("click", startPlayback, { once: true });
+}
+
+function proceedToMainTask() {
+  document.body.innerHTML = `
+    <div id="visual-container"></div>
+    <audio id="myAudio" hidden preload="auto"></audio>
+    <div id="trialControls"></div>
+  `;
+
+  setupVisualElements();
+      // Load block files
+ (async () => {
+    for (const block of BLOCK_ORDER) {
+      try {
+        const response = await fetch(BLOCK_FILES[block]);
+        const text = await response.text();
+        const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
+        shuffleArray(rows);
+        blocks[block] = rows.slice(0, TRIALS_PER_BLOCK);
+      } catch (err) {
+        alert(`Failed to load ${block} block: ` + err.message);
+        return;
+      }
+    }
+
+    runPracticeTrials(BLOCK_ORDER[currentBlockIndex]);
+  })();
 }
 
   function setupVisualElements() {
