--- a/index.html
+++ b/index.html
@@ -193,32 +193,43 @@ function showIntroScreen() {
     }
 
     video.onended = () => {
-     showNarrationScreen();
+     showSplitScreenWithVideoAndText();
     };
   };
 
   window.addEventListener("click", startPlayback, { once: true });
 }
 
-function showNarrationScreen() {
+function showSplitScreenWithVideoAndText() {
   document.body.innerHTML = `
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; flex-direction: column; text-align: center; padding: 40px;">
-      <div style="font-size: 1.8em; max-width: 800px; color: #4b2e83; font-weight: bold; line-height: 1.6;">
-        The magical elevator can do all sorts of silly things to the music!<br><br>
-        Sometimes it makes the music go faster or slower...<br><br>
-        Other times, the music sounds higher or lower than before!<br><br>
-        Let’s practice together so you know what to listen for!
+    <div style="display: flex; height: 100vh; width: 100vw; background: white; overflow: hidden;">
+      <!-- Left: Video -->
+      <div style="flex: 1; display: flex; align-items: center; justify-content: center; background: black;">
+        <video id="introVideo2" autoplay muted playsinline style="max-width: 100%; max-height: 100%;">
+          <source src="intro_video2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
-      <div id="noteAnimation" style="margin-top: 40px;"></div>
-      <audio id="introNarration3" src="intro_narration3.mp3" autoplay></audio>
+
+      <!-- Right: Text -->
+      <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 40px;">
+        <div style="font-size: 1.6em; line-height: 1.6; color: #4b2e83; font-weight: bold; max-width: 90%;">
+          The magical elevator can do all sorts of silly things to the music!<br><br>
+          Sometimes it makes the music go faster or slower...<br><br>
+          Other times, the music sounds higher or lower than before!<br><br>
+          Let’s practice together so you know what to listen for!
+        </div>
+      </div>
     </div>
+    <audio id="introNarration3" src="intro_narration3.mp3" autoplay></audio>
   `;
 
   const narration = document.getElementById("introNarration3");
   narration.onended = () => {
-    proceedToMainTask();
+    proceedToMainTask();  // continue into practice trials
   };
 }
+
 
 function proceedToMainTask() {
   document.body.innerHTML = `
