--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@ function showIntroScreen() {
     }
 
     video.onended = () => {
-     showNarrationScreen();
-    };
+      setTimeout(showNarrationScreen, 2000);    };
   };
 
   window.addEventListener("click", startPlayback, { once: true });
@@ -202,31 +201,42 @@ function showIntroScreen() {
 
 function showNarrationScreen() {
   document.body.innerHTML = `
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; padding: 60px; box-sizing: border-box;">
-      <!-- Left side: Melody image -->
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; padding: 40px; box-sizing: border-box;">
+      <!-- Melody image -->
       <div style="flex: 1; display: flex; justify-content: center;">
         <img src="Melody.png" alt="Melody character" style="max-height: 80vh; max-width: 90%; border-radius: 20px;">
       </div>
 
-      <!-- Right side: Text and animation -->
-      <div style="flex: 1; padding: 30px; text-align: left; display: flex; flex-direction: column; justify-content: center;">
-        <div style="font-size: 1.6em; color: #4b2e83; font-weight: bold; line-height: 1.6;">
+      <!-- Text and play button -->
+      <div style="flex: 1; text-align: center; padding: 30px;">
+        <p style="font-size: 1.4em; line-height: 1.8;">
           The magical elevator can do all sorts of silly things to the music!<br><br>
           Sometimes it makes the music go faster or slower...<br><br>
           Other times, the music sounds higher or lower than before!<br><br>
           Let’s practice together so you know what to listen for!
-        </div>
+        </p>
+        <button id="playNarration" style="margin-top: 20px; padding: 10px 20px; background-color: #4b2e83; color: white; border: none; border-radius: 8px; font-size: 1em; cursor: pointer;">Click to Play</button>
+        <audio id="introNarration3" src="intro_narration3.mp3"></audio>
       </div>
-
-      <audio id="introNarration3" src="intro_narration3.mp3" autoplay></audio>
     </div>
   `;
 
-  const narration = document.getElementById("introNarration3");
-  narration.onended = () => {
-    proceedToMainTask();
-  };
+  const button = document.getElementById("playNarration");
+  const audio = document.getElementById("introNarration3");
+
+  button.addEventListener("click", async () => {
+    button.disabled = true;
+    try {
+      await audio.play();
+    } catch (err) {
+      console.warn("Audio play failed:", err);
+    }
+    audio.onended = () => {
+      proceedToMainTask();  // Replace with next function
+    };
+  });
 }
+
 
 
 function proceedToMainTask() {
