--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@ function showNarrationScreen() {
 
       <!-- Text and play button -->
       <div style="flex: 1; text-align: center; padding: 30px;">
-        <p style="font-size: 1.4em; line-height: 1.8;">
-          The magical elevator can do all sorts of silly things to the music!<br><br>
-          Sometimes it makes the music go faster or slower...<br><br>
+        <p style="font-size: 1.7em; line-height: 1.8;">
+          The magical elevator can do all sorts of silly things to the music!<br>
+          Sometimes it makes the music go faster or slower...<br>
           Other times, the music sounds higher or lower than before!<br><br>
           Let’s practice together so you know what to listen for!
         </p>
