--- a/index.html
+++ b/index.html
@@ -232,12 +232,80 @@ function showNarrationScreen() {
       console.warn("Audio play failed:", err);
     }
     audio.onended = () => {
-      proceedToMainTask();  // Replace with next function
+      showFastIntro(); // Replace with next function
     };
   });
 }
 
+function showFastIntro() {
+  document.body.innerHTML = `
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; padding: 40px; box-sizing: border-box;">
+      <p style="font-size: 1.5em; line-height: 1.8; max-width: 800px; text-align: center;">
+        First, let's listen to fast music! <br><br>
+        This is what it sounds like when the elevator makes the music go faster.
+      </p>
+      <audio id="fastNarration" src="PT_FAST1_NARRATION.mp3"></audio>
+    </div>
+  `;
 
+  const narration = document.getElementById("fastNarration");
+  narration.play().then(() => {
+    narration.onended = () => {
+      playFastVideo();
+    };
+  }).catch(err => {
+    console.warn("Autoplay issue:", err);
+    playFastVideo();
+  });
+}
+
+function playFastVideo() {
+  document.body.innerHTML = `
+    <video id="fastVideo" width="100%" height="100%" playsinline style="background:black;">
+      <source src="PT_FAST1.mp4" type="video/mp4">
+    </video>
+  `;
+  const video = document.getElementById("fastVideo");
+  video.play();
+  video.onended = () => {
+    showSlowIntro();
+  };
+}
+
+function showSlowIntro() {
+  document.body.innerHTML = `
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; padding: 40px; box-sizing: border-box;">
+      <p style="font-size: 1.5em; line-height: 1.8; max-width: 800px; text-align: center;">
+        Now, let's listen to slow music! <br><br>
+        This is what it sounds like when the elevator makes the music go slower.
+      </p>
+      <audio id="slowNarration" src="PT_SLOW1_NARRATION.mp3"></audio>
+    </div>
+  `;
+
+  const narration = document.getElementById("slowNarration");
+  narration.play().then(() => {
+    narration.onended = () => {
+      playSlowVideo();
+    };
+  }).catch(err => {
+    console.warn("Autoplay issue:", err);
+    playSlowVideo();
+  });
+}
+
+function playSlowVideo() {
+  document.body.innerHTML = `
+    <video id="slowVideo" width="100%" height="100%" playsinline style="background:black;">
+      <source src="PT_SLOW1.mp4" type="video/mp4">
+    </video>
+  `;
+  const video = document.getElementById("slowVideo");
+  video.play();
+  video.onended = () => {
+    proceedToMainTask();
+  };
+}
 
 function proceedToMainTask() {
   document.body.innerHTML = `
