--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ function showNarrationScreen() {
 
       <!-- Text and play button -->
       <div style="flex: 1; text-align: center; padding: 30px;">
-        <p style="font-size: 1.5em; line-height: 1.8;">
+        <p style="font-size: 1.4em; line-height: 1.8;">
           The magical elevator can do all sorts of silly things to the music!<br>
           Sometimes it makes the music go faster or slower...<br>
           Other times, the music sounds higher or lower than before!<br><br>
@@ -241,8 +241,10 @@ function showFastIntro() {
   document.body.innerHTML = `
     <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; padding: 40px; box-sizing: border-box;">
       <p style="font-size: 1.5em; line-height: 1.8; max-width: 800px; text-align: center;">
-        First, let's listen to fast music! <br><br>
-        This is what it sounds like when the elevator makes the music go faster.
+        First, we’re going to learn about tempo. <br>
+ Tempo is how fast or slow the music goes. <br><br>
+Ready? <br>
+ Listen to this song and pay attention to how the music changes when Melody rides the elevator to the 2nd floor. 
       </p>
       <audio id="fastNarration" src="PT_FAST1_NARRATION.mp3"></audio>
     </div>
@@ -276,8 +278,9 @@ function showSlowIntro() {
   document.body.innerHTML = `
     <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; padding: 40px; box-sizing: border-box;">
       <p style="font-size: 1.5em; line-height: 1.8; max-width: 800px; text-align: center;">
-        Now, let's listen to slow music! <br><br>
-        This is what it sounds like when the elevator makes the music go slower.
+       Whoa! That was a fast ride! <br> <br>
+Let’s try one more. <br>
+Now Melody is going to go super sloooow. Listen carefully!
       </p>
       <audio id="slowNarration" src="PT_SLOW1_NARRATION.mp3"></audio>
     </div>
