--- a/index.html
+++ b/index.html
@@ -306,9 +306,82 @@ function playSlowVideo() {
   const video = document.getElementById("slowVideo");
   video.play();
   video.onended = () => {
-    proceedToMainTask();
+   showTempoInstructions();
   };
 }
+
+function showTempoInstructions() {
+  document.body.innerHTML = `
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: white; padding: 40px; box-sizing: border-box;">
+      <p style="font-size: 1.5em; line-height: 1.8; max-width: 800px; text-align: center;">
+        Great! Now let's practice some more.<br><br>
+        Listen to the music carefully and tell me if it's <strong>faster</strong>, <strong>slower</strong>, or the <strong>same</strong> as before!
+      </p>
+      <audio id="tempoInstructions" src="PT_TEMPO_INSTRUCTIONS.mp3"></audio>
+    </div>
+  `;
+
+  const audio = document.getElementById("tempoInstructions");
+  audio.play().then(() => {
+    audio.onended = () => {
+      playTempoPracticeVideo("PT_FAST2.mp4", "fast", () => {
+        playTempoPracticeVideo("PT_SLOW2.mp4", "slow", proceedToMainTask);
+      });
+    };
+  }).catch(err => {
+    console.warn("Autoplay issue:", err);
+    playTempoPracticeVideo("PT_FAST2.mp4", "fast", () => {
+      playTempoPracticeVideo("PT_SLOW2.mp4", "slow", proceedToMainTask);
+    });
+  });
+}
+
+function playTempoPracticeVideo(videoFile, correctAnswer, onComplete) {
+  document.body.innerHTML = `
+    <video id="practiceTempoVideo" width="100%" height="100%" playsinline style="background:black;">
+      <source src="${videoFile}" type="video/mp4">
+    </video>
+  `;
+
+  const video = document.getElementById("practiceTempoVideo");
+  video.play();
+
+  video.onended = () => {
+    showTempoResponseScreen(correctAnswer, () => {
+      onComplete();
+    });
+  };
+}
+
+function showTempoResponseScreen(correctAnswer, callback) {
+  document.body.innerHTML = `
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; padding: 20px;">
+      <h1 style="color: #4b2e83;">How did the music sound?</h1>
+      <div style="display: flex; gap: 40px; margin-top: 30px;">
+        <button class="tempo-btn" data-choice="fast" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Fast</button>
+        <button class="tempo-btn" data-choice="slow" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Slow</button>
+        <button class="tempo-btn" data-choice="same" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Same</button>
+      </div>
+      <div id="feedback" style="margin-top: 30px; font-size: 1.2em; color: red;"></div>
+    </div>
+  `;
+
+  const buttons = document.querySelectorAll('.tempo-btn');
+  buttons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const choice = btn.getAttribute('data-choice');
+      if (choice === correctAnswer) {
+        document.getElementById("feedback").style.color = "green";
+        document.getElementById("feedback").innerHTML = "Correct! Great job!";
+        setTimeout(callback, 2000);
+      } else {
+        document.getElementById("feedback").style.color = "red";
+        document.getElementById("feedback").innerHTML = "Oops! Try again. Think carefully about how the music changed.";
+      }
+    });
+  });
+}
+
 
 function proceedToMainTask() {
   document.body.innerHTML = `
