--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ function showNarrationScreen() {
 
       <!-- Text and play button -->
       <div style="flex: 1; text-align: center; padding: 30px;">
-        <p style="font-size: 1.4em; line-height: 1.8;">
+        <p style="font-size: 1.3em; line-height: 1.8;">
           The magical elevator can do all sorts of silly things to the music!<br>
           Sometimes it makes the music go faster or slower...<br>
           Other times, the music sounds higher or lower than before!<br><br>
@@ -244,7 +244,7 @@ function showFastIntro() {
         First, we’re going to learn about tempo. <br>
  Tempo is how fast or slow the music goes. <br><br>
 Ready? <br>
- Listen to this song and pay attention to how the music changes when Melody rides the elevator to the 2nd floor. 
+ Listen to this song and pay attention to how the music changes to become faster when Melody rides the elevator to the second floor. 
       </p>
       <audio id="fastNarration" src="PT_FAST1_NARRATION.mp3"></audio>
     </div>
